se comentan controles para importar excel

--- a/src/app/pages/impresion-credencial/impresion-credencial.component.html
+++ b/src/app/pages/impresion-credencial/impresion-credencial.component.html
@@ -45,13 +45,14 @@
           />
         </mat-form-field>
 
-        <input
+        <!-- <input
           type="file"
           (change)="cargarArchivo($event)"
           accept=".xlsx, .xls"
         />
         <button (click)="subirDatos()">Enviar Datos al Servidor</button>
-        <p>{{ mensaje }}</p>
+        <p>{{ mensaje }}</p> -->
+
       </form>
     </div>
   </div>
