--- a/src/app/pages/impresion-credencial/impresion-credencial.component.html
+++ b/src/app/pages/impresion-credencial/impresion-credencial.component.html
@@ -144,7 +144,7 @@
             <td mat-cell *matCellDef="let row" class="action-cell">
               <div
                 class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
-                @if (true) {
+                @if (permisoAcciones) {
                 <button (click)="print(row)" mat-button color="accent" class="flex gap-2">
                   <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
