se agregan las funciones de exportar a xls y pdf y la funcion de importar un excel con una columna llamada curp en minusculas para poder subir curps aprobadas por sas, para su posterior impresion desde el sistema

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <!-- component -->
 <div class="relative">
-  <div class="fixed bottom-1 right-5 flex flex-col items-end justify-center ">
+  <div class="fixed bottom-1 right-5 flex flex-col items-end justify-center z-[100]">
 
     @if (menuShow) {
     <div class="bg-gray-100 mb-2">
