--- a/src/app/components/camara/camara.component.html
+++ b/src/app/components/camara/camara.component.html
@@ -1,19 +1,20 @@
 <div class="camara-container flex flex-col gap-4">
-    <div class="basis-full bg-gray-100">
-        <div class="bg-white border-0 shadow-lg sm:rounded-3xl">
+    <div class="basis-full">
+        <div class="">
 
-            <div class="flex flex-col items-center p-4">
+            <div class="flex flex-col items-center">
                 <!-- Camera device selection -->
-                <select [(ngModel)]="selectedDevice" (ngModelChange)="startStream()"
-                    class="w-full p-2 mb-4 border rounded-lg">
-                    <option value="">Select a camera</option>
-                    <option *ngFor="let device of devices; let i = index" [value]="device.deviceId">
-                        {{ device.label || 'Camera ' + (i + 1) }}
-                    </option>
-                </select>
+                <mat-form-field class="w-full">
+                    <mat-label>Cámara</mat-label>
+                    <mat-select [(ngModel)]="selectedDevice" (ngModelChange)="startStream()">
+                        <mat-option value="">- Selecciona una opción -</mat-option>
+                        <mat-option *ngFor="let device of devices; let i = index" [value]="device.deviceId">{{
+                            device.label || 'Camera ' + (i + 1) }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
 
                 <!-- Camera video stream -->
-                <div class="relative w-full aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
+                <div class="relative w-full aspect-video rounded-lg overflow-hidden mb-4">
                     <video #videoElement autoplay playsinline class="w-full h-full object-cover"></video>
                     @if (stream) {
                     <div class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full animate-ping"></div>
@@ -21,7 +22,7 @@
                 </div>
 
                 <!-- Captured image -->
-                <div class="w-full aspect-video bg-gray-200 rounded-lg overflow-hidden ">
+                <div class="w-full aspect-video rounded-lg overflow-hidden ">
                     @if (capturedImage) {
                     <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
                     } @else {
@@ -38,9 +39,8 @@
         </div>
     </div>
 
-    <div class="basis-full bg-gray-100">
-        <div
-            class="py-2 flex gap-2 items-center flex-row justify-left  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
+    <div class="basis-full">
+        <div class="py-2 flex gap-2 items-center flex-row justify-center px-2">
 
             <!-- Capture button -->
             <button (click)="capturePhoto()" [disabled]="!stream"
