--- a/src/app/pages/asistencia/asistencia.component.html
+++ b/src/app/pages/asistencia/asistencia.component.html
@@ -1,4 +1,50 @@
-<main class="flex">
-    <app-camara />
-    <section class="container-historico"></section>
+<main class="asistencia">
+    <section class="bg-white border-0 shadow-lg rounded p-4">
+        <form [formGroup]="myGroup" class="form" action="">
+            <mat-form-field class="form__item">
+                <mat-label>Módulos</mat-label>
+                <mat-select formControlName="modulo">
+                    <mat-option *ngFor="let modulo of modulos" [value]="modulo.nombre">{{modulo.nombre}}</mat-option>
+                </mat-select>
+                @if( isValidField('modulo') ) {
+                <mat-error class="text-red-500">
+                    Campo requerido
+                </mat-error>
+                }
+            </mat-form-field>
+            <mat-form-field class="form__item">
+                <mat-label>Clave</mat-label>
+                <input matInput placeholder="Clave..." formControlName="modulo" type="password">
+            </mat-form-field>
+
+        </form>
+        <app-camara />
+    </section>
+    <section class="bg-white border-0 shadow-lg rounded p-4 w-full">
+        <h2>Histórico de asistencia</h2>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!-- Fecha Column -->
+            <ng-container matColumnDef="usuario">
+                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
+            </ng-container>
+
+            <!-- Entrada Column -->
+            <ng-container matColumnDef="fecha_hora_entrada">
+                <th mat-header-cell *matHeaderCellDef> Entrada </th>
+                <td mat-cell *matCellDef="let element"> {{element.fecha_hora_entrada}} </td>
+            </ng-container>
+
+            <!-- Salida Column -->
+            <ng-container matColumnDef="fecha_hora_salida">
+                <th mat-header-cell *matHeaderCellDef> Salida </th>
+                <td mat-cell *matCellDef="let element"> {{element.fecha_hora_salida}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </section>
 </main>
