--- a/src/app/pages/asistencia/asistencia.component.scss
+++ b/src/app/pages/asistencia/asistencia.component.scss
@@ -1,4 +1,5 @@
 .asistencia {
+    margin-top: 2.5rem;
     width: 100%;
     padding: 1rem;
     display: flex;
@@ -19,4 +20,11 @@
 
 table {
     width: 100%;
+}
+
+.input-tipo {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    min-width: 120px;
 }
