--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -1,4 +1,4 @@
-<div class="container h-screen py-5 mx-auto">
+<div class="container py-5 mx-auto">
     <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
 
         <div class="flex items-center justify-between">
