--- a/src/app/pages/impresion-credencial/impresion-credencial.component.html
+++ b/src/app/pages/impresion-credencial/impresion-credencial.component.html
@@ -1,10 +1,7 @@
 <div class="container py-5 mx-auto">
   <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
     <div class="flex items-center justify-between">
-      <form
-        [formGroup]="formImpresion"
-        class="flex items-center justify-between flex-wrap gap-2"
-      >
+      <form [formGroup]="formImpresion" class="flex items-center justify-between flex-wrap gap-2">
         <mat-form-field>
           <mat-label>Impresoras</mat-label>
           <mat-select formControlName="impresora">
@@ -12,7 +9,7 @@
             @for (impresora of printers; track impresora) {
             <mat-option [value]="impresora.name">{{
               impresora.name
-            }}</mat-option>
+              }}</mat-option>
             }
           </mat-select>
         </mat-form-field>
@@ -50,53 +47,41 @@
         <mat-form-field>
           <mat-label>Fecha de registro</mat-label>
           <mat-date-range-input [rangePicker]="picker">
-            <input
-              matStartDate
-              formControlName="fechaInicio"
-              placeholder="Inicio"
-            />
+            <input matStartDate formControlName="fechaInicio" placeholder="Inicio" />
             <input matEndDate formControlName="fechaFin" placeholder="Fin" />
           </mat-date-range-input>
           <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
-          <mat-datepicker-toggle
-            matIconSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
 
         <mat-form-field class="w-100">
           <mat-label>Buscar</mat-label>
-          <input
-            matInput
-            formControlName="search"
-            placeholder="Buscar..."
-            (keyup.enter)="getAspirantesBeneficio()"
-          />
+          <input matInput formControlName="search" placeholder="Buscar..." (keyup.enter)="getAspirantesBeneficio()" />
         </mat-form-field>
 
 
         @if (permisoAccionesAdmin) {
-          <div class="card">
-            <div class="card-body" >
-              <div class="d-flex flex-column flex-md-row align-items-center justify-content-between" style="gap: 10px;">
-                <div>
-                  <label for="txtFile" class="btn">
-                    <i class="fa fa-cloud-upload bg-orange-300 hover:bg-green-350 text-white font-bold py-2 px-4 rounded">
-                      Importar Curps Aprobadas XLSX
-                    </i>
-                  </label>
-                  <div class="input-group">
-                    <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file" formControlName="file"
-                      (change)="onFileSelected($event)">
-                  </div>
-                  <div *ngIf="lblUploadingFile" style="margin: 0;font-size: 18px;color: #5270ae;">
-                    <label style="font-weight: 500;">{{lblUploadingFile}}</label>
-                  </div>
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex flex-column flex-md-row align-items-center justify-content-between" style="gap: 10px;">
+              <div>
+                <label for="txtFile" class="btn">
+                  <i class="fa fa-cloud-upload bg-orange-300 hover:bg-green-350 text-white font-bold py-2 px-4 rounded">
+                    Importar Curps Aprobadas XLSX
+                  </i>
+                </label>
+                <div class="input-group">
+                  <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file"
+                    formControlName="file" (change)="onFileSelected($event)">
+                </div>
+                <div *ngIf="lblUploadingFile" style="margin: 0;font-size: 18px;color: #5270ae;">
+                  <label style="font-weight: 500;">{{lblUploadingFile}}</label>
                 </div>
               </div>
             </div>
           </div>
+        </div>
         }
 
       </form>
@@ -107,38 +92,25 @@
     <div class="flex justify-between items-center mb-2">
       <div class="flex justify-start items-center gap-5">
         <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
-        [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
-      <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
-        [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button>
+          [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+          [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button>
       </div>
 
       <div class="flex justify-start items-center gap-5">
-        <button
-          (click)="formImpresion.reset()"
+        <button (click)="formImpresion.reset()"
           class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
-          [disabled]="!generado || loading"
-        >
+          [disabled]="!generado || loading">
           <mat-icon matSuffix>clear_all</mat-icon>
           <span>Limpiar campos</span>
         </button>
 
-        <button
-          (click)="getAspirantesBeneficio()"
-          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2"
-        >
+        <button (click)="getAspirantesBeneficio()"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2">
           <span> Consultar </span>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M3 12h12" />
             <path d="M11 8l4 4l-4 4" />
@@ -153,39 +125,21 @@
     </div>
 
     <ng-template #loaded>
-      <div
-        class="table-container mat-elevation-z8"
-        style="background-color: white"
-      >
+      <div class="table-container mat-elevation-z8" style="background-color: white">
         <table mat-table [dataSource]="dataSource" matSort>
           <!-- Impreso -->
           <ng-container matColumnDef="impreso">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              <mat-icon
-                aria-hidden="false"
-                aria-label="Impreso"
-                fontIcon="print"
-                >Impreso</mat-icon
-              >
+              <mat-icon aria-hidden="false" aria-label="Impreso" fontIcon="print">Impreso</mat-icon>
             </th>
             <td mat-cell *matCellDef="let row">
               <ng-container *ngIf="row.impreso == 1; else pendiente">
-                <mat-icon
-                  aria-hidden="false"
-                  aria-label="Impreso"
-                  style="color: orange"
-                  fontIcon="print_connect"
-                  >Impreso</mat-icon
-                >
+                <mat-icon aria-hidden="false" aria-label="Impreso" style="color: orange"
+                  fontIcon="print_connect">Impreso</mat-icon>
               </ng-container>
               <ng-template #pendiente>
-                <mat-icon
-                  aria-hidden="false"
-                  aria-label="Pendiente de credencializar"
-                  style="color: darkslategrey"
-                  fontIcon="print_error"
-                  >Pendiente</mat-icon
-                >
+                <mat-icon aria-hidden="false" aria-label="Pendiente de credencializar" style="color: darkslategrey"
+                  fontIcon="print_error">Pendiente</mat-icon>
               </ng-template>
             </td>
           </ng-container>
@@ -244,13 +198,12 @@
             <td mat-cell *matCellDef="let row" class="action-cell">
               <div
                 class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
-                @if (row.impreso != 1) {
                 <button (click)="print(row)" mat-button color="accent" class="flex gap-2">
                   Imprimir Tarjeta
                 </button>
-                }
                 @if (permisoAccionesOperador) {
-                  <button mat-button (click)="deleteCurpAprobada(row.id_curp_aprobada_ssas)" color="accent">Eliminar</button>
+                <button mat-button (click)="deleteCurpAprobada(row.id_curp_aprobada_ssas)"
+                  color="accent">Eliminar</button>
                 }
 
               </div>
@@ -258,11 +211,7 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr
-            mat-row
-            *matRowDef="let row; columns: displayedColumns"
-            class=""
-          ></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns" class=""></tr>
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
@@ -271,14 +220,8 @@
         </table>
       </div>
 
-      <mat-paginator
-        [length]="total"
-        [pageSize]="perPage"
-        [pageIndex]="currentPage"
-        [pageSizeOptions]="[5, 10, 20]"
-        showFirstLastButtons
-        (page)="onPaginateChange($event)"
-      >
+      <mat-paginator [length]="total" [pageSize]="perPage" [pageIndex]="currentPage" [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons (page)="onPaginateChange($event)">
       </mat-paginator>
     </ng-template>
   </div>
