--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -6,56 +6,64 @@
       <div x-show="open" click.away="open = false"
         class="mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 px-2 py-2 *:text-end">
 
-        <app-opcion-menu 
+        <app-opcion-menu
+          *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_acciones')"
+          texto="Acciones"
+          ruta="/inicio/acciones"
+          [accion]="cerrarMenu.bind(this)"
+          icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 4v16l13 -8z" />'
+        ></app-opcion-menu>
+
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_asistencia')"
-          texto="Asistencia" 
+          texto="Asistencia"
           ruta="/inicio/asistencia"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M20.942 13.021a9 9 0 1 0 -9.407 7.967" /><path d="M12 7v5l3 3" /><path d="M15 19l2 2l4 -4" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_impresion')"
-          texto="Impresión" 
+          texto="Impresión"
           ruta="/inicio/impresion-credencial"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" /><path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" /><path d="M7 13m0 2a2 2 0 0 1 2 -2h6a2 2 0 0 1 2 2v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2z" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_reportes')"
-          texto="Reportes" 
+          texto="Reportes"
           ruta="/inicio/reportes"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" /><path d="M9 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" /><path d="M9 17v-5" /><path d="M12 17v-1" /><path d="M15 17v-3" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_consulta')"
-          texto="Consulta" 
+          texto="Consulta"
           ruta="/inicio/consulta"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" /><path d="M21 21l-6 -6" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_registro')"
-          texto="Registro" 
+          texto="Registro"
           ruta="/inicio/registro"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M5 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" /><path d="M3 21v-2a4 4 0 0 1 4 -4h4c.96 0 1.84 .338 2.53 .901" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /><path d="M16 19h6" /><path d="M19 16v6" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
+        <app-opcion-menu
           *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_configurar')"
-          texto="Configurar" 
+          texto="Configurar"
           ruta="/inicio/configuraciones"
           [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M11.445 20.913a1.665 1.665 0 0 1 -1.12 -1.23a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.31 .318 1.643 1.79 .997 2.694" /><path d="M15 19l2 2l4 -4" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />'
         ></app-opcion-menu>
 
-        <app-opcion-menu 
-          texto="Cerrar Sesión" 
+        <app-opcion-menu
+          texto="Cerrar Sesión"
           [esCerrarSesion]="true"
           [accion]="cerrarSesion.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M9 8v-2a2 2 0 0 1 2 -2h7a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-2" /><path d="M3 12h13l-3 -3" /><path d="M13 15l3 -3" />'
