--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,9 +25,17 @@
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Contraseña</label>
-        <input type="password" id="password" name="password" formControlName="password"
-          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-          autocomplete="off">
+        <div class="relative">
+          <input [type]="showPassword ? 'text' : 'password'" id="password" name="password" formControlName="password"
+            class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+            autocomplete="off">
+          <button type="button" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-600 focus:outline-none" 
+            (click)="togglePasswordVisibility()">
+            <span class="material-icons text-xl">
+              {{ showPassword ? 'visibility_off' : 'visibility' }}
+            </span>
+          </button>
+        </div>
         <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)"
           class="text-red-500 text-sm mt-1">
           <div *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es requerida.</div>
