feat: mejora en la gestión de impresión manual y ajustes en la configuración del proyecto

--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -99,7 +99,7 @@
         </div>
         <div class="w-full p-3 overflow-hidden" [class.opacity-50]="!isCheckboxChecked" [class.pointer-events-none]="!isCheckboxChecked">
           <div
-            class="relative border-dotted h-10 rounded-lg border-dashed border-2 border-blue-700 bg-gray-100 flex justify-center items-center">
+            class="relative border-dotted h-10 rounded-lg border-2 border-blue-700 bg-gray-100 flex justify-center items-center">
 
             <div class="absolute">
               <div [ngClass]="{'flex gap-2 items-center': true, 'text-blue-400': lblUploadingFile, 'text-gray-400': !lblUploadingFile}">
