--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-@use "tailwindcss";
-
+@import "tailwindcss";
 
 html, body { min-height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
